--- a/AutoFixtureBogus/AutoFixtureBogus.Tests/AutoFixtureBogus.Tests.csproj
+++ b/AutoFixtureBogus/AutoFixtureBogus.Tests/AutoFixtureBogus.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AutoFixtureBogus.TestData\AutoFixtureBogus.TestData.csproj" />
     <ProjectReference Include="..\AutoFixtureBogus\AutoFixtureBogus.csproj" />
   </ItemGroup>
 
